@@ -1,5 +1,7 @@
 *SVN*
 
+* Restore eager condition interpolation, document it's differences [Rick]
+
 * Don't rollback in teardown unless a transaction was started. Don't start a transaction in create_fixtures if a transaction is started.  #6282 [Jacob Fugal, Jeremy Kemper]
 
 * Add #delete support to has_many :through associations.  Closes #6049 [Martin Landers]
